added rest of array_reconstructor support (java). Bumped version to 1.3.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,6 @@ Stuff left TO DO in Pyrolite:
 
 Java+.NET:
 * more config items especially port numbers and hostnames
-* implement array constructor based on machine type bytearray (_array_reconstructor, this is what Python3 uses to pickle array.array)
-* implement memo-ing in the Pickler to be able to pickle recursive objects.
-
+* implement memo-ing in the Pickler to be able to pickle recursive objects (note: unpickling works fine already).
+* document type mappings java<->python and C#<->python
+* port the array_reconstructor code from java to c#
