--- a/TODO.txt
+++ b/TODO.txt
@@ -4,5 +4,5 @@ Stuff left TO DO in Pyrolite:
 Java+.NET:
 * more config items especially port numbers and hostnames
 * implement memo-ing in the Pickler to be able to pickle recursive objects (note: unpickling works fine already).
-* document type mappings java<->python and C#<->python
+* document type mappings from C#<->python
 * port the array_reconstructor code from java to c#
