--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
 Stuff left TO DO in Pyrolite:
 
-Implement memo-ing in the Pickler to be able to pickle recursive objects
-(note: unpickling works fine already).
+- support Pyro4.20+ (protocol level 45+, multiple serializers. At least support pickle)
+- Implement memo-ing in the Pickler to be able to pickle recursive objects (note: unpickling works fine already).
+
